--- a/draft/static/home.css
+++ b/draft/static/home.css
@@ -1,2 +1,18 @@
-body {background-color: coral;}
-table {background-color: #6495ED;}
+body {
+    min-width: fit-content;
+}
+
+table {
+    background-color: #6495ED;
+    
+}
+
+#canvas {
+    width: 100%;
+    height: 100%;
+}
+
+#container table {
+    width: 100%;
+    height: 100%;
+}
